--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,14 @@ body{
     height: 100vh;
     object-fit: cover;
 }
+
+.title{
+    padding-top: 40px;
+    margin-left: 40px;
+    
+}
+
+.text{
+    margin-left: 40px;
+    padding-bottom: 20px;
+}
