--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,18 @@ body{
     margin-left: 40px;
     padding-bottom: 20px;
 }
+
+.button{
+    color: white;
+    width: 100px;
+    height: 50px;
+    background-color: coral;
+    height: fit-content;
+    border: none;
+    margin-left: 40px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 15px;
+
+
+}
