--- a/styles.css
+++ b/styles.css
@@ -23,14 +23,58 @@ body{
 .button{
     color: white;
     width: 100px;
-    height: 50px;
+    height: 45px;
     background-color: coral;
-    height: fit-content;
     border: none;
     margin-left: 40px;
     margin-top: 30px;
     margin-bottom: 30px;
     font-size: 15px;
+}
 
+.index-btn{
+    position: absolute;
+    top: 60px;
+    right: 40px;
+}
 
+.filter{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    color: white;
+    background: rgba(0,0,0,0.75);
+}
+
+.content{
+    margin-left: 30%;
+    margin-top: 35%;
+}
+
+.content h1{
+    font-size: 44px;
+    margin-bottom: 0;
+}
+
+.content p{
+    font-size: 18px;
+    margin-top: 15px;
+}
+
+.alt-btn{
+    margin-left: unset;
+    margin-top: 10px;
+}
+
+.white-card{
+    background: white;
+    position: absolute;
+    top: 0;
+    width: 40%;
+    height: 100%;
+}
+
+.white-card-content{
+    padding: 40px;
 }
